<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/color_dialog_grid_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:orientation="vertical"
            android:useDefaultMargins="true"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_alpha"
        android:id="@+id/alpha_text_view"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"/>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alpha_seek_bar"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:max="255"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_red"
        android:id="@+id/red_text_view"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:layout_row="1"/>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/red_seek_bar"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:max="255"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_green"
        android:id="@+id/green_text_view"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:layout_row="2"/>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/green_seek_bar"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:max="255"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_blue"
        android:id="@+id/blue_text_view"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:layout_row="3"/>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/blue_seek_bar"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:max="255"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/color_view_height"
        android:id="@+id/color_view"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"/>
</GridLayout>